# docs/swagger.json
@@ -89,6 +89,48 @@
                     }
                 }
             }
+        },
+        "/getContracts/{startBlock}/{endBlock}": {
+            "get": {
+                "description": "Returns a list of new contracts deployed between a start and end block, along with their verification status, standard (ERC-20 or ERC-721), and transaction details.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Contracts"
+                ],
+                "summary": "Get the new contracts deployed between a start and end block",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Start block",
+                        "name": "startBlock",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "End block",
+                        "name": "endBlock",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/main.newContractResponse"
+                            }
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -107,6 +149,26 @@
             "type": "object",
             "properties": {
                 "address": {
+                    "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
+                }
+            }
+        },
+        "main.newContractResponse": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "block": {
+                    "type": "integer"
+                },
+                "standard": {
+                    "type": "string"
+                },
+                "transaction": {
                     "type": "string"
                 },
                 "verified": {
